--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
         <div class="intro-container">
             <p class="intro-title">Anurag Kushwaha.</p>
             <p class="intro-desc">Hello there! I'm a dedicated
-                <span style="color: rgb(77, 23, 5); font-weight: 700; border-top: 10px solid #4d262133;
+                <span 
+                style="color: rgb(77, 23, 5); font-weight: 700; background-color:  #4d262133 ;
                 
-               ">frontend developer</span> with a flair for crafting engaging
+                
+               "
+               >frontend developer</span> with a flair for crafting engaging
                 and intuitive user experiences. My journey in the
                 ever-evolving world of web development has equipped me with a keen eye for design and a passion for
                 turning ideas into reality through code.</p>
