added sutle anim

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <title>Anurag Kushwaha Portfolio</title>
 </head>
 
@@ -20,17 +21,17 @@
             </ul>
         </div>
         <div class="intro-container">
-            <p class="intro-title">Anurag Kushwaha.</p>
+
+            <p id="typed-output" class="intro-title"></p>
             <p class="intro-desc">Hello there! I'm a dedicated
-                <span 
-                style="color: rgb(77, 23, 5); font-weight: 700; background-color:  #4d262133 ;
+                <span style="color: rgb(77, 23, 5); font-weight: 700; background-color:  #4d262133 ;
                 
                 
-               "
-               >frontend developer</span> with a flair for crafting engaging
+               ">frontend developer</span> with a flair for crafting engaging
                 and intuitive user experiences. My journey in the
                 ever-evolving world of web development has equipped me with a keen eye for design and a passion for
-                turning ideas into reality through code.</p>
+                turning ideas into reality through code.
+            </p>
         </div>
     </div>
 </body>
