--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
                 turning ideas into reality through code.
             </p>
         </div>
+        <div class="project-container">
+            <p class="project-header">Personal Projects</p>
+            <div class="project-tile">
+                <h3>Wireframes.</h3>
+                
+            </div>
+            <div class="project-tile2">
+                <h3>Designing</h3>
+                
+            </div>
+        </div>
     </div>
 </body>
 
