--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 
             </div>
             <div class="project-tile2">
-                <h3>Designing</h3>
+                <h3>Designing.</h3>
                 
             </div>
         </div>
