--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
                 turning ideas into reality through code.
             </p>
         </div>
+        <div class ="career-container">
+            <div class ="career-left">
+                <h1>My Career So Far</h1>
+                <p>In my role as a Software Engineer,  My focus on the harmonious integration of design and functionality drives me to create software that not only meets technical requirements but also offers users an exceptional and intuitive experience.</p>
+                <button>Download Resume</button>
+            </div>
+            <div class = "career-right">
+                <h5>HTML</h5>
+                <h5>JavaScript</h5>
+            </div>
+        </div>
         <div class="project-container">
             <p class="project-header">Personal Projects</p>
             <div class="project-tile">
