--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
     <div class="main-container">
         <div class="nav-container">
-            <img src="assets/person-icon.png">
+            <a href ="#intro"><img src="assets/person-icon.png"></a>
             <ul>
-                <li> <a href="">WORKS</a></li>
+                <li> <a href="#works">WORKS</a></li>
                 <li><a href="">INFO</a></li>
                 <li><a href="assets/AnuragKushwaha.pdf" download="AnuragKushwaha.pdf">CV</a></li>
             </ul>
         </div>
-        <div class="intro-container">
+        <div class="intro-container" id ="intro">
 
             <p id="typed-output" class="intro-title"></p>
             <p class="intro-desc">Hello there! I'm a dedicated
@@ -90,7 +90,7 @@
             </div>
         </div>
 
-        <div class="project-container">
+        <div class="project-container" id  ="works">
             <p class="project-header">Personal Projects</p>
             <div class="project-tile">
                 <h3>Wireframes.</h3>
