--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="nav-container">
             <a href ="#intro"><img src="assets/person-icon.png"></a>
             <ul>
-                <li> <a href="#works">WORKS</a></li>
+                <li> <a href="#works" onclick="scrollToSection('works')">WORKS</a></li>
                 <li><a href="">INFO</a></li>
                 <li><a href="assets/AnuragKushwaha.pdf" download="AnuragKushwaha.pdf">CV</a></li>
             </ul>
@@ -90,7 +90,7 @@
             </div>
         </div>
 
-        <div class="project-container" id  ="works">
+        <section class="project-container" id  ="works">
             <p class="project-header">Personal Projects</p>
             <div class="project-tile">
                 <h3>Wireframes.</h3>
@@ -100,7 +100,7 @@
                 <h3>Designing.</h3>
 
             </div>
-        </div>
+        </section>
     </div>
 </body>
 
